# AGI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
automation/: script_selector.py
core/: dynamic_scheduler.py  goal_optimizer.py  knowledge_manager.py
knowledge_modules/: llm_knowledge.py
ui/: cli_interface.py
